<resources>
    <string name="app_name">Loginpage</string>
    <string name="login_page">Login page:</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="user_email">User Email:</string>
    <string name="user_password">User Password:</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome:</string>
    <string name="attempts_remaining">Attempts Remaining:</string>
</resources>
