<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login_page"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/un"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/un"
        android:layout_width="131dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="168dp"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/up"
        android:layout_width="193dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/user_password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/upassword"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ue"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/upassword"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <TextView
        android:id="@+id/ue"
        android:layout_width="145dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/user_email"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/uemail"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/uemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/up"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/attempt"
        android:layout_width="186dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="79dp"
        android:text="@string/attempts_remaining"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upassword" />

    <TextView
        android:id="@+id/attm"
        android:layout_width="71dp"
        android:layout_height="31dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/attempt"
        app:layout_constraintTop_toBottomOf="@+id/upassword" />
</android.support.constraint.ConstraintLayout>